--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -5,6 +5,7 @@
 footer.fixed-bottom {
   background-color: var(--global-footer-bg-color);
   font-size: 0.75rem;
+  padding-bottom: env(safe-area-inset-bottom, 0px);
 
   .container {
     color: var(--global-footer-text-color);
