--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -5,7 +5,7 @@
 @use "variables" as v;
 
 body {
-  padding-bottom: 70px;
+  padding-bottom: calc(70px + env(safe-area-inset-bottom, 0px));
   color: var(--global-text-color);
   background-color: var(--global-bg-color);
 
